implement controller of the video-transformer module